--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
                         taught by Geoffrey Hinton at the time I took it (The most recent iteration of the course can be found 
                         <a href="https://www.cs.toronto.edu/~rgrosse/csc321">here</a>).
                         
-                        <h6>"It receives as input 3 consecutive words, and its aim is to predict a distribution over the next word
+                        <blockquote>"It receives as input 3 consecutive words, and its aim is to predict a distribution over the next word
                         (the target word). We train the model using the cross-entropy criterion, which is equivalent to
                         maximizing the probability it assigns to the targets in the training set. Hopefully it will also learn
-                        to make sensible predictions for sequences it hasn’t seen before."</h6>
+                        to make sensible predictions for sequences it hasn’t seen before."</blockquote>
                         <a href="images/diagram.png"><img src="images/diagram.png"></a>
                     </p>
                     
