--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="sidebar sb-width">
                     <img src="images/dota.png" alt="" class="rounded">
                     <h4><a href="">dota-nn</a></h4>
-                    <a href="" class="sb-links">Portfolio</a>
-                    <a href="" class="sb-links">Github</a>
+                    <a href="https://daendinam.github.io/" class="sb-links">Portfolio</a>
+                    <a href="https://github.com/daendinam" class="sb-links">Github</a>
                     <hr class="hide">
                 
 
