--- a/index.html
+++ b/index.html
@@ -245,8 +245,19 @@ correctly learning to make Prob: 0.01940
                         grammar, all without manually digging through the data to clean it up. 
                         </p>
                         
-                        
-                        <h6>All code is up on github and free to use. Please attribute where possible.</h6>
+                    <h3>
+                    Learned
+                    </h3>
+                        <p>
+                        Scraping and working with large amounts of data can be a lot more time costly than expected! In the
+                        future I hope I can focus more on scheduling time (and re-scheduling as problems arise). 
+                        </p>
+                        <p>
+                        A few ideas for expansion: What other forms of useable data exist in the gaming world? Could
+                        match statistics from multiplayer games be used to reliably predict player skill? What about 
+                        in-game chat history? 
+                        </p>
+                    <h6>All code is up on github and free to use. Please attribute where possible.</h6>
                 </div>
             <div class="row">
                 <div class="footer sb-width">
